CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20252611_ 030.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_optimized.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_optimized.cu(246): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_optimized.cu(257): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_optimized.cu(258): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_optimized.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_optimized.cu(851): error: identifier "kolBytes_matrix_ant" is undefined
      int* ant_parametr = new int[kolBytes_matrix_ant];
                                  ^

aco_cuda_optimized.cu(860): error: identifier "numBytesInt_matrix_ant" is undefined
      do { cudaError_t err = cudaMemcpy(dev_agent_node, ant_parametr, numBytesInt_matrix_ant, cudaMemcpyHostToDevice); if (err != cudaSuccess) { std::cerr << "CUDA error " << "aco_cuda_optimized.cu" << ":" << 860 << " " << cudaGetErrorString(err) << std::endl; exit(1); } } while(0);
                                                                      ^

aco_cuda_optimized.cu(861): error: identifier "numBytes_ant" is undefined
      do { cudaError_t err = cudaMemcpy(dev_OF, antOF, numBytes_ant, cudaMemcpyHostToDevice); if (err != cudaSuccess) { std::cerr << "CUDA error " << "aco_cuda_optimized.cu" << ":" << 861 << " " << cudaGetErrorString(err) << std::endl; exit(1); } } while(0);
                                                       ^

3 errors detected in the compilation of "aco_cuda_optimized.cu".
aco_cuda_optimized.cu
========== COMPILATION END ========== 
Exit code: 2 
